--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,67 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <import type="android.view.View"/>
+	<data>
 
-        <variable
-            name="videoInfo"
-            type="com.bing.example.model.entity.VideoInfo" />
+		<import type="android.view.View" />
 
-        <variable
-            name="selected"
-            type="Boolean"/>
+		<variable
+			name="videoInfo"
+			type="com.bing.example.model.entity.VideoInfo" />
 
-        <variable
-            name="mode"
-            type="Integer"/>
-    </data>
+		<variable
+			name="selected"
+			type="Boolean" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="170dp">
-        <LinearLayout
-            android:id="@+id/backContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="4dp"
-            android:background="@color/white">
+		<variable
+			name="mode"
+			type="Integer" />
+	</data>
 
-            <ImageView
-                android:id="@+id/thumb"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                app:img_url="@{videoInfo.imagePath}" />
+	<androidx.cardview.widget.CardView
+		android:layout_width="match_parent"
+		android:layout_height="231dp"
+		app:cardCornerRadius="8dp">
+		<FrameLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@{videoInfo.title}"
-                android:gravity="center"/>
-        </LinearLayout>
+			<LinearLayout
+				android:id="@+id/backContent"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@color/white"
+				android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/foreground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/selected_foreground"
-            android:visibility="@{mode == 0 ? View.GONE : View.VISIBLE}">
+				<ImageView
+					android:id="@+id/thumb"
+					android:layout_width="match_parent"
+					android:layout_height="150dp"
+					android:scaleType="centerCrop"
+					app:img_url="@{videoInfo.imagePath}" />
 
-            <com.bing.example.widget.SmoothCheckBox
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="top|end"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:clickable="false"
-                android:checked="@{selected}"
-                app:stroke_width="2dp"
-                app:color_checked="@color/accent"/>
-        </FrameLayout>
+				<TextView
+					android:id="@+id/title"
+					android:layout_width="match_parent"
+					android:layout_height="37dp"
+					android:gravity="center"
+					android:text="@{videoInfo.title}" />
 
-    </FrameLayout>
+				<View
+					android:layout_width="match_parent"
+					android:layout_height="0.4dp"
+					android:background="@drawable/color_divider" />
+
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:layout_width="match_parent"
+					android:layout_height="36dp">
+
+					<ImageView
+						android:id="@+id/rename"
+						android:layout_width="48dp"
+						android:layout_height="36dp"
+						android:scaleType="centerInside"
+						android:src="@drawable/ic_edit_black_24dp"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toStartOf="@+id/delete"
+						app:layout_constraintTop_toTopOf="parent" />
+
+					<ImageView
+						android:id="@+id/delete"
+						android:layout_width="48dp"
+						android:layout_height="36dp"
+						android:scaleType="centerInside"
+						android:src="@drawable/ic_delete_black_24dp"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toStartOf="@+id/share"
+						app:layout_constraintTop_toTopOf="parent" />
+
+					<ImageView
+						android:id="@+id/share"
+						android:layout_width="48dp"
+						android:layout_height="36dp"
+						android:scaleType="centerInside"
+						android:src="@drawable/ic_share_black_24dp"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintTop_toTopOf="parent" />
+				</androidx.constraintlayout.widget.ConstraintLayout>
+			</LinearLayout>
+
+			<FrameLayout
+				android:id="@+id/foreground"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@color/selected_foreground"
+				android:visibility="@{mode == 0 ? View.GONE : View.VISIBLE}">
+
+				<com.bing.example.widget.SmoothCheckBox
+					android:id="@+id/checkbox"
+					android:layout_width="24dp"
+					android:layout_height="24dp"
+					android:layout_gravity="top|end"
+					android:layout_marginTop="8dp"
+					android:layout_marginEnd="8dp"
+					android:checked="@{selected}"
+					app:color_checked="@color/accent"
+					app:stroke_width="2dp" />
+			</FrameLayout>
+
+		</FrameLayout>
+	</androidx.cardview.widget.CardView>
+
 
 </layout>
