--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,114 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<data>
+    <data>
 
-		<import type="android.view.View" />
+        <import type="android.view.View" />
 
-		<variable
-			name="videoInfo"
-			type="com.bing.example.model.entity.VideoInfo" />
+        <variable
+            name="videoInfo"
+            type="com.bing.example.model.entity.VideoInfo" />
 
-		<variable
-			name="selected"
-			type="Boolean" />
+        <variable
+            name="selected"
+            type="Boolean" />
 
-		<variable
-			name="mode"
-			type="Integer" />
-	</data>
+        <variable
+            name="mode"
+            type="Integer" />
+    </data>
 
-	<androidx.cardview.widget.CardView
-		android:layout_width="match_parent"
-		android:layout_height="231dp"
-		app:cardCornerRadius="8dp">
-		<FrameLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="231dp">
 
-			<LinearLayout
-				android:id="@+id/backContent"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:background="@color/white"
-				android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/backContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-				<ImageView
-					android:id="@+id/thumb"
-					android:layout_width="match_parent"
-					android:layout_height="150dp"
-					android:scaleType="centerCrop"
-					app:img_url="@{videoInfo.imagePath}" />
+            <ImageView
+                android:id="@+id/thumb"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                app:img_url="@{videoInfo.imagePath}" />
 
-				<TextView
-					android:id="@+id/title"
-					android:layout_width="match_parent"
-					android:layout_height="37dp"
-					android:gravity="center"
-					android:text="@{videoInfo.title}" />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:paddingStart="8dp"
+                android:singleLine="true"
+                android:gravity="center_vertical"
+                android:textSize="16sp"
+                android:textColor="#ee000000"
+                android:text="@{videoInfo.title}" />
 
-				<View
-					android:layout_width="match_parent"
-					android:layout_height="0.4dp"
-					android:background="@drawable/color_divider" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.4dp"
+                android:background="@drawable/color_divider" />
 
-				<androidx.constraintlayout.widget.ConstraintLayout
-					android:layout_width="match_parent"
-					android:layout_height="36dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="36dp">
 
-					<ImageView
-						android:id="@+id/rename"
-						android:layout_width="48dp"
-						android:layout_height="36dp"
-						android:scaleType="centerInside"
-						android:src="@drawable/ic_edit_black_24dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toStartOf="@+id/delete"
-						app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/rename"
+                    android:layout_width="48dp"
+                    android:layout_height="36dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_edit_blue_24dp"
+                    android:background="?android:selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/delete"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-					<ImageView
-						android:id="@+id/delete"
-						android:layout_width="48dp"
-						android:layout_height="36dp"
-						android:scaleType="centerInside"
-						android:src="@drawable/ic_delete_black_24dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toStartOf="@+id/share"
-						app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/delete"
+                    android:layout_width="48dp"
+                    android:layout_height="36dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_delete_red_24dp"
+                    android:background="?android:selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/share"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-					<ImageView
-						android:id="@+id/share"
-						android:layout_width="48dp"
-						android:layout_height="36dp"
-						android:scaleType="centerInside"
-						android:src="@drawable/ic_share_black_24dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintTop_toTopOf="parent" />
-				</androidx.constraintlayout.widget.ConstraintLayout>
-			</LinearLayout>
+                <ImageView
+                    android:id="@+id/share"
+                    android:layout_width="48dp"
+                    android:layout_height="36dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_share_green_24dp"
+                    android:background="?android:selectableItemBackground"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-			<FrameLayout
-				android:id="@+id/foreground"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:background="@color/selected_foreground"
-				android:visibility="@{mode == 0 ? View.GONE : View.VISIBLE}">
+        <FrameLayout
+            android:id="@+id/foreground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/selected_foreground"
+            android:visibility="@{mode == 0 ? View.GONE : View.VISIBLE}">
 
-				<com.bing.example.widget.SmoothCheckBox
-					android:id="@+id/checkbox"
-					android:layout_width="24dp"
-					android:layout_height="24dp"
-					android:layout_gravity="top|end"
-					android:layout_marginTop="8dp"
-					android:layout_marginEnd="8dp"
-					android:checked="@{selected}"
-					app:color_checked="@color/accent"
-					app:stroke_width="2dp" />
-			</FrameLayout>
+            <com.bing.example.widget.SmoothCheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="top|end"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:checked="@{selected}"
+                app:color_checked="@color/accent"
+                app:stroke_width="2dp" />
+        </FrameLayout>
 
-		</FrameLayout>
-	</androidx.cardview.widget.CardView>
+    </FrameLayout>
 
 </layout>
