--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
 	<color name="bg_black_06">#06000000</color>
 	<color name="white">#ffffff</color>
 	<color name="selected_foreground">#1126b74e</color>
+	<color name="grey">#eeeeee</color>
 </resources>
