--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="margin_thirty_two">32dp</dimen>
+	<dimen name="margin_eight">8dp</dimen>
+	<dimen name="margin_thirty">30dp</dimen>
+
 </resources>
