--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,24 @@
 		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 
+	<style name="TvTaskDetailContent">
+		<item name="android:gravity">center_vertical</item>
+		<item name="android:textSize">16sp</item>
+		<item name="android:textColor">#88000000</item>
+		<item name="android:lineSpacingMultiplier">1.2</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginStart">16dp</item>
+		<item name="android:layout_marginEnd">16dp</item>
+	</style>
+
+	<style name="TvDialogTitle">
+		<item name="android:textColor">@color/colorTextTitle</item>
+		<item name="android:textSize">18sp</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginStart">16dp</item>
+		<item name="android:layout_marginEnd">16dp</item>
+	</style>
+
 </resources>
