--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_logo" />
+                android:src="@drawable/ic_logo"
+                android:visibility="gone"/>
         </androidx.appcompat.widget.Toolbar>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,7 +58,7 @@
                 android:layout_height="48dp"
                 android:background="?android:selectableItemBackground"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_delete_black_24dp"
+                android:src="@drawable/ic_delete_44black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/select_all"
                 app:layout_constraintTop_toTopOf="parent" />
