--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,18 @@
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
+		<!--<item name="android:windowDisablePreview">true</item>-->
+		<!--<item name="android:windowTranslucentStatus">true</item>-->
 	</style>
+
+	<style name="AppTheme.Toolbar" parent="Widget.AppCompat.ActionBar">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">54dp</item>
+		<item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+		<item name="android:elevation">2dp</item>
+	</style>
+
+	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 	<style name="TvTaskDetailContent">
 		<item name="android:gravity">center_vertical</item>
