--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -3,39 +3,47 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools">
 
-	<com.scwang.smartrefresh.layout.SmartRefreshLayout
-		android:id="@+id/refreshLayout"
+	<com.bing.statuslayout.StatusLayout
+		android:id="@+id/statusLayout"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		app:srlEnableAutoLoadMore="false"
-		app:srlEnableLoadMore="true">
+		android:layout_height="match_parent">
 
-		<com.scwang.smartrefresh.layout.header.ClassicsHeader
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			app:srlClassicsSpinnerStyle="FixedBehind"
-			app:srlDrawableArrowSize="20dp"
-			app:srlDrawableMarginRight="20dp"
-			app:srlDrawableProgress="@drawable/ic_progress_puzzle"
-			app:srlDrawableProgressSize="20dp"
-			app:srlEnableLastTime="true"
-			app:srlFinishDuration="500"
-			app:srlTextSizeTime="10dp"
-			app:srlTextSizeTitle="16sp"
-			app:srlTextTimeMarginTop="2dp" />
-
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/recyclerView"
+		<com.scwang.smartrefresh.layout.SmartRefreshLayout
+			android:id="@+id/refreshLayout"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_marginTop="8dp"
-			android:layout_marginStart="8dp"
-			android:layout_marginEnd="8dp"
-			android:overScrollMode="never"
-			tools:listitem="@android:layout/simple_list_item_2" />
+			app:srlEnableAutoLoadMore="false"
+			app:srlEnableLoadMore="true">
 
-		<com.scwang.smartrefresh.layout.footer.ClassicsFooter
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content" />
-	</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+			<com.scwang.smartrefresh.layout.header.ClassicsHeader
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				app:srlClassicsSpinnerStyle="FixedBehind"
+				app:srlDrawableArrowSize="20dp"
+				app:srlDrawableMarginRight="20dp"
+				app:srlDrawableProgress="@drawable/ic_progress_puzzle"
+				app:srlDrawableProgressSize="20dp"
+				app:srlEnableLastTime="true"
+				app:srlFinishDuration="500"
+				app:srlTextSizeTime="10dp"
+				app:srlTextSizeTitle="16sp"
+				app:srlTextTimeMarginTop="2dp" />
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/recyclerView"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_marginTop="8dp"
+				android:layout_marginStart="8dp"
+				android:layout_marginEnd="8dp"
+				android:overScrollMode="never"
+				tools:listitem="@android:layout/simple_list_item_2" />
+
+			<com.scwang.smartrefresh.layout.footer.ClassicsFooter
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
+		</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+	</com.bing.statuslayout.StatusLayout>
+
 </layout>
