--- a/app/src/main/res/menu/menu_acion_mode.xml
+++ b/app/src/main/res/menu/menu_acion_mode.xml
@@ -10,7 +10,7 @@
 
 	<item
 		android:id="@+id/select_all"
-		android:icon="@drawable/ic_select_all_black_24dp"
+		android:icon="@drawable/ic_select_all"
 		android:title="@string/select_all"
 		app:showAsAction="always"/>
 
