--- a/app/src/main/res/layout/activity_video_edit.xml
+++ b/app/src/main/res/layout/activity_video_edit.xml
@@ -20,7 +20,7 @@
 				android:layout_width="48dp"
 				android:layout_height="48dp"
 				android:scaleType="centerInside"
-				android:src="@drawable/ic_arrow_back_black"
+				android:src="@drawable/ic_arrow_back_white"
 				android:background="?android:selectableItemBackground" />
 
 			<TextView
@@ -28,7 +28,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
 				android:gravity="center"
-				android:textColor="@color/black_color_aa"
+				android:textColor="@color/white"
 				android:typeface="sans"
 				android:textSize="18sp"
 				android:text="@string/video_edit" />
@@ -44,7 +44,8 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				app:srlEnableAutoLoadMore="false"
-				app:srlEnableLoadMore="true">
+				app:srlEnableLoadMore="false"
+				app:srlEnableRefresh="false">
 
 				<com.scwang.smartrefresh.layout.header.ClassicsHeader
 					android:layout_width="match_parent"
