--- a/app/src/main/res/layout/item_video_edit.xml
+++ b/app/src/main/res/layout/item_video_edit.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout  xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout
+	<androidx.cardview.widget.CardView
 		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="150dp"
+		android:layout_height="wrap_content"
 		android:background="@color/colorAccent">
 
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+        android:padding="16dp">
 
+        <ImageView
+            android:id="@+id/ivEdit"
+            android:layout_width="match_parent"
+            android:layout_height="120dp" />
+
+        <TextView
+            android:id="@+id/tvEdit"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/accent"
+            android:textSize="15sp"/>
 	</LinearLayout>
+	</androidx.cardview.widget.CardView>
 </layout>
