--- a/app/src/main/res/layout/layout_notification.xml
+++ b/app/src/main/res/layout/layout_notification.xml
@@ -8,9 +8,10 @@
         android:id="@+id/icon"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
         android:layout_weight="1"
         android:padding="0dp"
-        android:src="@mipmap/app_icon" />
+        android:src="@mipmap/app_logo" />
 
     <TextView
         android:id="@+id/time"
